# Parallel_Computing_Basics-Practice_9-8_semester

./: CMakeLists.txt  main.cpp
